Done CSS to fix align bug and text croping

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,10 +1,3 @@
-.card-link {
-  text-decoration: none;
-  a {
-  text-decoration: none;
-  }
-}
-
 .card {
   height: 250px;
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
@@ -14,46 +7,61 @@
   position: relative;
   margin-top: 20px;
 }
-.card-user {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  width: 40px;
-  border-radius: 50%;
-}
-.card-category {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  font-size: 8px;
-  text-transform: uppercase;
-}
-.card-description {
-padding: 0 8px;
 
-}
-.card-description h4 {
-  font-size: 18px;
-}
-
-.name h4 {
-  max-width: 300px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.card-description p {
-  font-size: 14px;
-  opacity: 0.7;
-  font-weight: lighter;
-  height: 40px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
 .card-info {
   display: flex;
   justify-content: space-between;
 }
 
+.card-details {
+  padding: 0 8px;
+  h4 {
+  font-size: 18px;
+  }
+  p {
+    font-size: 14px;
+    opacity: 0.7;
+    font-weight: lighter;
+  }
+}
 
+.card-description {
+  width: 100%;
+  p {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+  }
+}
+
+.card-name {
+  width: 85%;
+  h4 {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+}
+
+.card-price {
+  position: absolute;
+  right: 20px;
+}
+
+
+// .card-category {
+//   position: absolute;
+//   top: 10px;
+//   left: 10px;
+//   font-size: 8px;
+//   text-transform: uppercase;
+// }
+// .card-user {
+//   position: absolute;
+//   right: 10px;
+//   top: 10px;
+//   width: 40px;
+//   border-radius: 50%;
+// }
